--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -1,4 +1,11 @@
 <responsive-switcher>
-  <google-button></google-button>
-  <google-email></google-email>
+  <h2>Logowanie</h2>
+  <div class="row">
+    <div class="col-md-12">
+      <google-email></google-email>
+    </div>
+    <div class="col-md-12 mt-10">
+      <google-button></google-button>
+    </div>
+  </div>
 </responsive-switcher>
