--- a/src/app/core/components/register-email/register-email.component.html
+++ b/src/app/core/components/register-email/register-email.component.html
@@ -36,15 +36,13 @@
     <div class="card">
       <h4 class="card-title">Informacja</h4>
       <div class="card-body">
-          <p>Rejestrując się, masz pełny dostęp do serwisu, mogąc: </p>
+          <p>Rejstrując się masz większe możliwości: </p>
           <ul>
-            <li>Prowadzić dietę,</li>
-            <li>Zaplanować dietę,</li>
-            <li>Organizując godzny posiłków,</li>
-            <li>Dodawać produkty żywnościowe,</li>
-            <li>Korzystać z kalkulatora kalorii.</li>
+            <li>Zostanie stałym klientem,</li>
+            <li>Priorytetowe wykonanie zamówienia,</li>
+            <li>Promocje na wybrane produkty,</li>
+            <li>Śledzenie statusu zamówienia.</li>
           </ul>
-        <p>Nie wykorzystujem w żaden sposób Waszych maili - służą jedynie do logowania.</p>
       </div>
     </div>
   </div>
