--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -1,7 +1,7 @@
 <responsive-switcher>
   <div class="title">
     <span class="wegebus">wegebus</span> - <span class="title-second"><span class="bold">dowóz warzyw</span> na terenie <span
-    class="bold">Kalisza i okolic</span></span>
+    class="bold">Kalisza, Ostrowa i okolic</span></span>
   </div>
 </responsive-switcher>
 <div class="content">
@@ -9,18 +9,33 @@
     <div class="main-text">
       Polskie warzywa od <span class="polish">Polskiego rolnika</span>
     </div>
-    <div class="check-offer text-center">
+    <div class="check-offer text-center padding-top">
       <button
         routerLink="/produkty"
         class="btn btn-lg btn-success">
         Sprawdź ofertę
       </button>
     </div>
-    <div class="secondary-text">
-      <span class="text">Polskie odmiany ziemniaka, marchwii i pietruszki tylko u nas</span>
+    <div class="padding-top"></div>
+    <div class="secondary-text background-text">
+      <span class="text-big">Zapraszamy do kontaktu</span>
+      <p></p>
+      <a
+        class="secondary-text text-big clickable underline"
+        href="tel: +48‭721099622‬"
+      >
+        ‭721 099 622‬
+      </a>
+      <p></p>
+      <a
+        class="secondary-text text-big clickable underline"
+        href="mailto: biurowegebus@gmail.com"
+      >
+        biurowegebus@gmail.com
+      </a>
+
     </div>
   </div>
 </div>
 
-<!--<span></span>-->
-  <app-footer></app-footer>
+<app-footer></app-footer>
