--- a/src/app/shipping/components/order-success/order-success.component.html
+++ b/src/app/shipping/components/order-success/order-success.component.html
@@ -1,5 +1,11 @@
 <responsive-switcher>
-  <p>
-    order-success works!
-  </p>
+  <div class="text-center">
+    <img src="assets/order-successful.png"/>
+    <h2 class="background-text text-muted">
+      Dziękujemy za złożenie zamówienia
+    </h2>
+    <p class="background-text text-accent">
+      Będziemy się z Państwem kontaktować telefonicznie celem ustalenia szczegółów dostawy.
+    </p>
+  </div>
 </responsive-switcher>
