--- a/src/app/core/components/google-button/google-button.component.html
+++ b/src/app/core/components/google-button/google-button.component.html
@@ -1,9 +1,8 @@
 <div class="row">
-  <div *ngIf="appUser$ as user else notLogged">
+  <div *ngIf="appUser$ as user">
     <p>Zalogowany jako {{user.email}}</p>
     <a (click)="logout()">Wyloguj</a>
   </div>
-
   <div *ngIf="!appUser$" class="text-center">
     <button
       type="button" class="google-button"
@@ -14,10 +13,4 @@
       <span class="google-button__text">Zaloguj z Google</span>
     </button>
   </div>
-
-  <ng-template #notLogged>
-    <div class="text-center">
-      <p>Nie jesteś zalogowany.</p>
-    </div>
-  </ng-template>
 </div>
