--- a/src/app/core/components/google-email/google-email.component.html
+++ b/src/app/core/components/google-email/google-email.component.html
@@ -1,10 +1,12 @@
 <div
-  *ngIf="!(uid$ | async)"
-  class="row">
+  class="grid"
+  *ngIf="!(uid$ | async)">
 
   <div class="row">
     <label for="email">Email</label>
-    <input #email="ngModel" [(ngModel)]="user.email" class="form-control"
+    <input #email="ngModel"
+           [(ngModel)]="user.email"
+           class="form-control"
            type="email"
            name="email"
            id="email">
@@ -17,19 +19,22 @@
            id="password">
   </div>
 
-  <div class="row mt-10">
-    <button
-      (click)="login()"
-      class="btn btn-success"
-      >
-      Login
-    </button>
+  <div class="grid mt-10">
 
-    <button
-      routerLink="/rejestracja"
-      class="btn btn-secondary pull-right"
+    <div class="row">
+      <button
+        (click)="login()"
+        class="btn btn-primary"
       >
-      Rejestruj
-    </button>
+        Login
+      </button>
+    </div>
+
+    <div class="row mt-10">
+      <a routerLink="/rejestracja">
+        Rejestruj
+      </a>
+    </div>
+
   </div>
 </div>
