--- a/src/app/home/components/home/home.component.scss
+++ b/src/app/home/components/home/home.component.scss
@@ -4,8 +4,8 @@
 
   .background {
     background: linear-gradient(
-        rgba(0, 0, 0, 0.01),
-        rgba(0, 0, 0, 0.01)
+        rgba(0, 0, 0, 0),
+        rgba(0, 0, 0, 0.3)
     ), url("assets/main-wallpaper.jpg");
 
     /* Full height */
@@ -59,7 +59,8 @@
 }
 
 .check-offer {
-  padding-top: 200px;
+  //padding-top: 200px;
+
   .btn {
     background: linear-gradient(-60deg, #904e95, #e73c7e, #ee7752);
     border-color: transparent;
@@ -69,17 +70,29 @@
   }
 }
 
+.padding-top {padding-top: 15vh }
+
 .secondary-text {
   font-weight: 300;
   filter: brightness(100%);
-  font-size: 4vh;
-  padding-top: 200px;
   text-align: center;
   color: whitesmoke;
-  .text {
+
+  &.background-text {
     background: linear-gradient(
-        rgba(0, 0, 0, 0.5),
-        rgba(0, 0, 0, 0.5)
-    )
+        rgba(0, 0, 0, 0.7),
+        rgba(0, 0, 0, 0.7)
+    );
+    padding: 20px;
   }
+
+  &.clickable {
+    &:hover { cursor: pointer }
+    &:active { outline: none }
+    &:focus { outline: none }
+  }
+
+  .text-small {font-size: 3vh}
+  .text-big {font-size: 3vh}
+  .underline {text-decoration: underline}
 }
