--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -1,7 +1,7 @@
 <responsive-switcher>
   <div class="title">
     <span class="wegebus">wegebus</span> - <span class="title-second"><span class="bold">dowóz warzyw</span> na terenie <span
-    class="bold">Kalisza, Ostrowa i okolic</span></span>
+    class="bold">Kalisza, Ostrowa Wielkopolskiego i okolic</span></span>
   </div>
 </responsive-switcher>
 <div class="content">
@@ -33,7 +33,6 @@
       >
         biurowegebus@gmail.com
       </a>
-
     </div>
   </div>
 </div>
