--- a/src/app/shared/components/product-card/product-card.component.html
+++ b/src/app/shared/components/product-card/product-card.component.html
@@ -25,7 +25,7 @@
         *ngIf="product.name"
         class="card-price text-accent text-muted"
       >
-        Produkt rośnie na naszym polu
+        Produkt jeszcze rośnie
       </p>
     </ng-template>
   </div>
